[package]
name = "egui_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.17.0"
egui_extras = { version="0.17.0", features = ["image", "svg"] }
once_cell = "1.10.0"
rand = "0.8.5"
rfd = "0.8.1"
chrono =  "0.4"

[dev-dependencies]
eframe = "0.17.0"
egui_extras = { version="0.17.0", features = ["image", "svg"] }
once_cell = "1.10.0"
rand = "0.8.5"
rfd = "0.8.1"
chrono =  "0.4"